# B_Spline_Traj_Planner

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/B-Spline-Traj-Planner/: TrajOpt.h
include/B_Spline_Traj_Planner/: PathPlanner.h  TemporalFunc.h
src/: BSpline.cpp  PathPlanner.cpp  TemporalFunc.cpp  TrajOpt.cpp  traj_planner.cpp  traj_planner_server.cpp
srv/: TrajPlanner.srv
